// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 16px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-10 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-12 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-14 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":rr:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="true"
          class="emotion-6 emotion-7"
          data-error="true"
          data-readonly="false"
          data-success="false"
          id=":rr:"
          rows="3"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        >
          <svg
            class="emotion-10 emotion-11"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div>
          <p
            class="emotion-14 emotion-3"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 16px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-10 {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-10 .fillStroke {
  stroke: #22674e;
  fill: none;
}

.emotion-12 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-14 {
  color: #22674e;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":rn:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="false"
          class="emotion-6 emotion-7"
          data-error="false"
          data-readonly="false"
          data-success="true"
          id=":rn:"
          rows="3"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        >
          <svg
            class="emotion-10 emotion-11"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div>
          <p
            class="emotion-14 emotion-3"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":ra:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="false"
          class="emotion-6 emotion-7"
          data-error="false"
          data-readonly="false"
          data-success="false"
          disabled=""
          id=":ra:"
          rows="3"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":rd:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="false"
          class="emotion-6 emotion-7"
          data-error="false"
          data-readonly="true"
          data-success="false"
          id=":rd:"
          rows="3"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render correctly when it is required 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.emotion-6 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-10::-webkit-input-placeholder {
  color: #727683;
}

.emotion-10::-moz-placeholder {
  color: #727683;
}

.emotion-10:-ms-input-placeholder {
  color: #727683;
}

.emotion-10::placeholder {
  color: #727683;
}

.emotion-10[data-success='true'] {
  border-color: #22674e;
}

.emotion-10[data-error='true'] {
  border-color: #b3144d;
}

.emotion-10[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-10:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-10:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-10:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-10:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-10::-webkit-input-placeholder {
  color: #727683;
}

.emotion-10::-moz-placeholder {
  color: #727683;
}

.emotion-10:-ms-input-placeholder {
  color: #727683;
}

.emotion-10::placeholder {
  color: #727683;
}

.emotion-10[data-success='true'] {
  border-color: #22674e;
}

.emotion-10[data-error='true'] {
  border-color: #b3144d;
}

.emotion-10[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-10:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-10:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-10:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-10:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-10:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <label
          class="emotion-4 emotion-5"
          for=":rg:"
        >
          Test
        </label>
        <svg
          class="emotion-6 emotion-7"
          viewBox="0 0 20 20"
        >
          <path
            d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
          />
        </svg>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <textarea
          aria-invalid="false"
          class="emotion-10 emotion-11"
          data-error="false"
          data-readonly="false"
          data-success="false"
          id=":rg:"
          rows="3"
        >
          test
        </textarea>
        <div
          class="emotion-12 emotion-13"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render correctly with basic props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":r0:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="false"
          class="emotion-6 emotion-7"
          data-error="false"
          data-readonly="false"
          data-success="false"
          id=":r0:"
          rows="3"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render correctly with maxlength 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-10 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-12 {
  color: #727683;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":rj:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="false"
          class="emotion-6 emotion-7"
          data-error="false"
          data-readonly="false"
          data-success="false"
          id=":rj:"
          maxlength="3"
          rows="3"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        />
      </div>
      <div
        class="emotion-10 emotion-11"
      >
        <div />
        <div
          class="emotion-12 emotion-3"
        >
          4/3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render with AutoExpandMax 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 16px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-10 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-12 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-14 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":r13:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="true"
          class="emotion-6 emotion-7"
          data-error="true"
          data-readonly="false"
          data-success="false"
          id=":r13:"
          rows="3"
          style="height: 2px; max-height: calc(NaNpx + 2*0.75rem); min-height: calc(NaNpx + 2*0.75rem);"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        >
          <svg
            class="emotion-10 emotion-11"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div>
          <p
            class="emotion-14 emotion-3"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render with AutoExpandMax and rows 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 16px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-10 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-12 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-14 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":r17:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="true"
          class="emotion-6 emotion-7"
          data-error="true"
          data-readonly="false"
          data-success="false"
          id=":r17:"
          rows="2"
          style="height: 2px; max-height: calc(NaNpx + 2*0.75rem); min-height: calc(NaNpx + 2*0.75rem);"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        >
          <svg
            class="emotion-10 emotion-11"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div>
          <p
            class="emotion-14 emotion-3"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea > should render with auto rows 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 16px);
}

.emotion-6::-webkit-input-placeholder {
  color: #727683;
}

.emotion-6::-moz-placeholder {
  color: #727683;
}

.emotion-6:-ms-input-placeholder {
  color: #727683;
}

.emotion-6::placeholder {
  color: #727683;
}

.emotion-6[data-success='true'] {
  border-color: #22674e;
}

.emotion-6[data-error='true'] {
  border-color: #b3144d;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-6:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-6:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-6:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

.emotion-10 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-12 {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-14 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3"
        for=":rv:"
      >
        Test
      </label>
      <div
        class="emotion-4 emotion-5"
      >
        <textarea
          aria-invalid="true"
          class="emotion-6 emotion-7"
          data-error="true"
          data-readonly="false"
          data-success="false"
          id=":rv:"
          rows="1"
          style="height: 2px; resize: none;"
        >
          test
        </textarea>
        <div
          class="emotion-8 emotion-9"
        >
          <svg
            class="emotion-10 emotion-11"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM10 5C10.4142 5 10.75 5.33579 10.75 5.75V10.25C10.75 10.6642 10.4142 11 10 11C9.58579 11 9.25 10.6642 9.25 10.25V5.75C9.25 5.33579 9.58579 5 10 5ZM10 15C10.5523 15 11 14.5523 11 14C11 13.4477 10.5523 13 10 13C9.44771 13 9 13.4477 9 14C9 14.5523 9.44771 15 10 15Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="emotion-12 emotion-13"
      >
        <div>
          <p
            class="emotion-14 emotion-3"
          >
            success
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
